--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.weather_statistics">
+    package="com.example.weather_research">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,12 +11,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity
-            android:name=".GraphicsActivity"
+            android:name="com.example.weather_research.GraphicsActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +25,7 @@
         </activity>
 
         <activity
-            android:name=".ConnectionActivity"
+            android:name="com.example.weather_research.ConnectionActivity"
             android:label="@string/action_connection"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -36,7 +36,7 @@
         </activity>
 
         <activity
-            android:name=".DataActivity"
+            android:name="com.example.weather_research.DataActivity"
             android:label="@string/action_data"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -47,7 +47,7 @@
         </activity>
 
         <activity
-            android:name=".SettingsActivity"
+            android:name="com.example.weather_research.SettingsActivity"
             android:label="@string/action_settings"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -58,7 +58,7 @@
         </activity>
 
         <activity
-            android:name=".HelpActivity"
+            android:name="com.example.weather_research.HelpActivity"
             android:label="@string/action_help"
             android:screenOrientation="portrait">
             <intent-filter>
